syntax = "proto3";

import "domain.proto";

option csharp_namespace = "GrpcPermissions";

package permissions;

service PermissionsService {
  rpc GetPermissions(GetPermissionsRequest) returns (GetPermissionsReply);
  rpc SetIsPublic(SetIsPublicRequest) returns (SetIsPublicReply);
  rpc GetAccess(GetAccessRequest) returns (GetAccessReply);
  rpc UpdatePermissions(UpdatePermissionsRequest)
      returns (UpdatePermissionsReply);
  rpc AddMembers(AddMembersRequest) returns (AddMembersReply);
  rpc RemoveMembers(RemoveMembersRequest) returns (RemoveMembersReply);
}

message RemoveMembersReply {
  enum Reason {
    UNKNOWN = 0;
    NOT_FOUND = 1;
  }

  message GroupEntry {
    string group_id = 1;
    Reason reason = 2;
  }

  message UserEntry {
    string user_id = 1;
    Reason reason = 2;
  }

  repeated string removed_users = 1;
  repeated UserEntry not_removed_users = 2;
  repeated string removed_groups = 3;
  repeated GroupEntry not_removed_groups = 4;
}

message RemoveMembersRequest {
  domain.ProtectedItem item = 1;
  repeated string group_ids = 2;
  repeated string user_ids = 3;
}

message AddMembersReply {
  enum Reason {
    UNKNOWN = 0;
    NOT_FOUND = 1;
  }

  message GroupEntry {
    string group_id = 1;
    Reason reason = 2;
  }

  message UserEntry {
    string user_id = 1;
    Reason reason = 2;
  }

  repeated string added_users = 1;
  repeated UserEntry not_added_users = 2;
  repeated string added_groups = 3;
  repeated GroupEntry not_added_groups = 4;
}

message AddMembersRequest {
  domain.ProtectedItem item = 1;
  repeated string group_ids = 2;
  repeated string user_ids = 3;
}

message UpdatePermissionsReply {
  enum Reason {
    UNKNOWN = 0;
    NOT_FOUND = 1;
  }

  message GroupEntry {
    string group_id = 1;
    Reason reason = 2;
  }

  message UserEntry {
    string user_id = 1;
    Reason reason = 2;
  }

  repeated string updated_users = 1;
  repeated UserEntry not_updated_users = 2;
  repeated string updated_groups = 3;
  repeated GroupEntry not_updated_groups = 4;
}

message UpdatePermissionsRequest {
  message GroupEntry {
    string group_id = 1;
    domain.Access access = 2;
  }

  message UserEntry {
    string user_id = 1;
    domain.Access access = 2;
  }

  domain.ProtectedItem item = 1;
  repeated UserEntry users = 2;
  repeated GroupEntry groups = 3;
}

message GetAccessReply {
  message AccessBatch { map<string, domain.Access> access = 1; }
  message Error {
    string description = 1;
    enum Status {
      UNKNOWN = 0;
      NO_ACCESS = 1;
      NOT_FOUND = 2;
    }
    Status status = 2;
  }
  oneof result {
    AccessBatch access = 1;
    Error error = 2;
  }
}

message GetAccessRequest { repeated domain.ProtectedItem items = 1; }

message SetIsPublicReply {
  enum Reason {
    UNKNOWN = 0;
    NOT_FOUND = 1;
    NO_ACCESS = 2;
  }
  message ProtectedEntry {
    string id = 1;
    Reason reason = 2;
  }

  repeated string updated_items = 1;
  repeated ProtectedEntry not_updated_items = 2;
}

message SetIsPublicRequest {
  bool is_public = 1;
  repeated domain.ProtectedItem items = 2;
}

message GetPermissionsReply {
  message Error {
    string description = 1;
    enum Status {
      UNKNOWN = 0;
      NO_ACCESS = 1;
      NOT_FOUND = 2;
    }
    Status status = 2;
  }
  oneof result {
    domain.Permissions preview = 1;
    Error error = 2;
  }
}

message GetPermissionsRequest { domain.ProtectedItem item = 1; }
